--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Weather of Favorite City</h2>
     <input type='text' id="city" placeholder="city name"/>
     <button id="get-weather">Get Weather</button>
+    <div class="container" id="issues"></div>
     <script src="script.js"></script>
 </body>
 </html>
